<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EDEDED"
    android:orientation="vertical">
    <ListView
        android:id="@+id/playlistlist"
        android:layout_width="wrap_content"
        android:choiceMode="singleChoice"
        android:layout_height="fill_parent"/>
    <rws.sm3.app.CustomWidget.CustomEditText
        android:id="@+id/edt_for_name_plylist"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edt_height"
        android:layout_marginBottom="@dimen/padding"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginTop="@dimen/padding"
        android:background="#ffffff"
        android:gravity="right|center_vertical"
        android:hint="@string/book_namedial"
        android:imeOptions="actionNext"
        android:padding="@dimen/padding"
        android:singleLine="true"
        android:textColor="#000000"
        android:textColorHint="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edt_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/padding"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginTop="@dimen/padding"
        android:gravity="center"
        android:weightSum="2">

        <rws.sm3.app.CustomWidget.CustomTextView
            android:id="@+id/submit_comment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/padding"
            android:layout_weight="1"
            android:background="@drawable/action_bar_button"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="#ffffff" />

        <rws.sm3.app.CustomWidget.CustomTextView
            android:id="@+id/cancel_comment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/padding"
            android:layout_weight="1"
            android:background="@drawable/action_bar_button"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#ffffff" />
    </LinearLayout>
</LinearLayout>