<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="2.5"
        android:layout_height="0dp">
        <rws.sm3.app.CustomWidget.CustomTextView
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="@dimen/size_top_text"
            android:text="@string/forgot_pass"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
    </View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:orientation="vertical"
        android:weightSum="12"
        android:layout_weight="4">
        <rws.sm3.app.CustomWidget.CustomEditText
            android:id="@+id/edt_email_forgot"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="right|center_vertical"
            android:textColor="#8F8F8E"
            android:inputType="textEmailAddress"
            android:paddingRight="@dimen/padding"
            android:textSize="@dimen/size_aud_text"
            android:hint="@string/hint_email"
            android:singleLine="true"
            android:background="@drawable/backgroundroundcorner"
            android:layout_weight="2.4"/>
        <View
            android:layout_width="match_parent"
            android:layout_weight="0.15"
            android:layout_height="0dp">
        </View>
        <rws.sm3.app.CustomWidget.CustomTextView
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="@dimen/size_aud_text"
            android:text="@string/forgot_submit"
            android:layout_height="0dp"
            android:background="@drawable/bg_log_btn"
            android:layout_weight="2.4"/>

    </LinearLayout>

</LinearLayout>
